--- a/index.html
+++ b/index.html
@@ -13202,7 +13202,10 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Scalable-Geospatial-(Vector)-Data-Science">Scalable Geospatial (Vector) Data Science<a class="anchor-link" href="#Scalable-Geospatial-(Vector)-Data-Science">&#182;</a></h1><h3 id="Nikolai-Janakiev-@njanakiev">Nikolai Janakiev <a href="https://github.com/njanakiev">@njanakiev</a><a class="anchor-link" href="#Nikolai-Janakiev-@njanakiev">&#182;</a></h3>
+<h1 id="Scalable-Geospatial-(Vector)-Data-Science">Scalable Geospatial (Vector) Data Science<a class="anchor-link" href="#Scalable-Geospatial-(Vector)-Data-Science">&#182;</a></h1><h3 id="Nikolai-Janakiev-@njanakiev">Nikolai Janakiev <a href="https://github.com/njanakiev">@njanakiev</a><a class="anchor-link" href="#Nikolai-Janakiev-@njanakiev">&#182;</a></h3><ul>
+<li>Slides - <a href="https://janakiev.com/scalable-geospatial-data-science">janakiev.com/scalable-geospatial-data-science</a></li>
+</ul>
+
 </div>
 </div>
 </div></section></section><section><section>
@@ -13266,7 +13269,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Scaling-Postgres">Scaling Postgres<a class="anchor-link" href="#Scaling-Postgres">&#182;</a></h1>
+<h1 id="Scaling-PostgreSQL">Scaling PostgreSQL<a class="anchor-link" href="#Scaling-PostgreSQL">&#182;</a></h1>
 </div>
 </div>
 </div><div class="fragment">
@@ -13340,7 +13343,17 @@ a.anchor-link {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li><strong>2006</strong> Apache Nuts - Hadoop</li>
+<li><strong>2006</strong> Apache Nutch - Hadoop</li>
+</ul>
+
+</div>
+</div>
+</div></div><div class="fragment">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li><strong>2007</strong> Used by Facebook, LinkedIn, Twitter, among others</li>
 </ul>
 
 </div>
@@ -13380,21 +13393,23 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="GeoMesa">GeoMesa<a class="anchor-link" href="#GeoMesa">&#182;</a></h1><p><a href="https://www.geomesa.org/">geomesa.org</a></p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Spatial-Indexing">Spatial Indexing<a class="anchor-link" href="#Spatial-Indexing">&#182;</a></h3><ul>
-<li>2d/3d Space Filling Curve</li>
+<h1 id="GeoMesa-(geomesa.org)">GeoMesa (<a href="https://www.geomesa.org/">geomesa.org</a>)<a class="anchor-link" href="#GeoMesa-(geomesa.org)">&#182;</a></h1><ul>
+<li><a href="https://locationtech.org">LocationTech</a> under the Eclipse Foundation</li>
 </ul>
 
 </div>
 </div>
 </div><div class="fragment">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Spatial-Indexing">Spatial Indexing<a class="anchor-link" href="#Spatial-Indexing">&#182;</a></h3><ul>
+<li>Space Filling Curve (2d/3d) - <a href="https://www.geomesa.org/documentation/user/datastores/index_overview.html">Index Overview</a></li>
+</ul>
+
+</div>
+</div>
+</div></div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13406,50 +13421,13 @@ a.anchor-link {
 
 </div>
 </div>
-</div></div></section></section><section><section>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="LocationTech">LocationTech<a class="anchor-link" href="#LocationTech">&#182;</a></h1><p><a href="https://projects.eclipse.org/projects/locationtech">projects.eclipse.org/projects/locationtech</a></p>
-
-</div>
-</div>
-</div><div class="fragment">
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li><a href="https://locationtech.github.io/geowave/">GeoWave</a></li>
-</ul>
-
-</div>
-</div>
 </div></div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li><a href="https://geotrellis.io/">GeoTrellis</a></li>
-</ul>
-
-</div>
-</div>
-</div></div><div class="fragment">
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li><a href="https://rasterframes.io/">RasterFrames</a></li>
-</ul>
-
-</div>
-</div>
-</div></div><div class="fragment">
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li><a href="https://locationtech.github.io/jts/">JTS Topology Suite</a></li>
+<h3 id="Integrations">Integrations<a class="anchor-link" href="#Integrations">&#182;</a></h3><ul>
+<li>Apache Spark</li>
+<li>GeoServer Integration</li>
 </ul>
 
 </div>
@@ -13465,8 +13443,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Presto">Presto<a class="anchor-link" href="#Presto">&#182;</a></h1><p><a href="https://prestodb.io/">prestodb.io</a></p>
-<ul>
+<h1 id="Presto-(prestodb.io)">Presto (<a href="https://prestodb.io/">prestodb.io</a>)<a class="anchor-link" href="#Presto-(prestodb.io)">&#182;</a></h1><ul>
 <li>Distributed SQL Query Engine for Big Data</li>
 </ul>
 
@@ -13496,9 +13473,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Dask">Dask<a class="anchor-link" href="#Dask">&#182;</a></h1><p><a href="https://dask.org/">dask.org</a></p>
-<ul>
-<li>parallel and distributed computing library for analytics written in Python</li>
+<h1 id="Dask-(dask.org)">Dask (<a href="https://dask.org/">dask.org</a>)<a class="anchor-link" href="#Dask-(dask.org)">&#182;</a></h1><ul>
+<li>Parallel and distributed computing library for analytics written in Python</li>
 </ul>
 
 </div>
@@ -13507,9 +13483,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="GeoPandas">GeoPandas<a class="anchor-link" href="#GeoPandas">&#182;</a></h1><p><a href="https://geopandas.org/">geopandas.org</a></p>
-<ul>
-<li>xtends the datatypes used by pandas to allow spatial operations on geometric types</li>
+<h1 id="GeoPandas-(geopandas.org)">GeoPandas (<a href="https://geopandas.org/">geopandas.org</a>)<a class="anchor-link" href="#GeoPandas-(geopandas.org)">&#182;</a></h1><ul>
+<li>Extends the datatypes used by <a href="https://pandas.pydata.org/">Pandas</a> to allow spatial operations on geometric types</li>
 </ul>
 
 </div>
@@ -13518,15 +13493,14 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="ElasticSearch">ElasticSearch<a class="anchor-link" href="#ElasticSearch">&#182;</a></h1>
+<h1 id="ElasticSearch-(elastic.co)">ElasticSearch (<a href="https://www.elastic.co/">elastic.co</a>)<a class="anchor-link" href="#ElasticSearch-(elastic.co)">&#182;</a></h1>
 </div>
 </div>
 </div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Geo-Point-Indexing">Geo Point Indexing<a class="anchor-link" href="#Geo-Point-Indexing">&#182;</a></h3><p><a href="https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-point.html">Geo-point datatype</a></p>
-<ul>
+<h3 id="Geo-Point-Indexing"><a href="https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-point.html">Geo Point Indexing</a><a class="anchor-link" href="#Geo-Point-Indexing">&#182;</a></h3><ul>
 <li>BKD-trees</li>
 <li>2019 - <a href="https://www.elastic.co/blog/bkd-backed-geo-shapes-in-elasticsearch-precision-efficiency-speed">BKD-backed geo_shapes in Elasticsearch: precision + efficiency + speed</a></li>
 </ul>
@@ -13537,8 +13511,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Geo-Queries">Geo Queries<a class="anchor-link" href="#Geo-Queries">&#182;</a></h3><p><a href="https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-queries.html">ElasticSearch - Geo queries</a></p>
-<ul>
+<h3 id="Geo-queries"><a href="https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-queries.html">Geo queries</a><a class="anchor-link" href="#Geo-queries">&#182;</a></h3><ul>
 <li><code>geo_bounding_box</code> query</li>
 <li><code>geo_distance</code> query</li>
 <li><code>geo_polygon</code> query</li>
@@ -13551,9 +13524,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="MongoDB">MongoDB<a class="anchor-link" href="#MongoDB">&#182;</a></h1><ul>
-<li><a href="https://www.mongodb.com/">mongodb.com</a></li>
-<li>Supports <a href="https://docs.mongodb.com/manual/reference/geojson/">GeoJSON Object</a></li>
+<h1 id="MongoDB-(mongodb.com)">MongoDB (<a href="https://www.mongodb.com/">mongodb.com</a>)<a class="anchor-link" href="#MongoDB-(mongodb.com)">&#182;</a></h1><ul>
+<li>Document-oriented NoSQL database which uses JSON-like documents with optional schemas</li>
 </ul>
 
 </div>
@@ -13563,6 +13535,7 @@ a.anchor-link {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Geospatial-Index">Geospatial Index<a class="anchor-link" href="#Geospatial-Index">&#182;</a></h3><ul>
+<li><a href="https://docs.mongodb.com/manual/reference/geojson/">GeoJSON Object</a></li>
 <li><a href="https://docs.mongodb.com/manual/core/2d/">2d Index</a>, <a href="https://docs.mongodb.com/manual/core/geospatial-indexes/">2d Index Internals</a> - Uses GeoHash Indexing</li>
 <li><a href="https://docs.mongodb.com/manual/core/2dsphere/">2d Sphere Index</a></li>
 <li><a href="https://docs.mongodb.com/manual/core/geohaystack/">geoHaystack Indexes</a> - Special index that is optimized to return results over small areas</li>
@@ -13574,14 +13547,13 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Geospatial-Queries">Geospatial Queries<a class="anchor-link" href="#Geospatial-Queries">&#182;</a></h3><ul>
+<h3 id="Geospatial-Queries"><a href="https://docs.mongodb.com/manual/geospatial-queries/">Geospatial Queries</a><a class="anchor-link" href="#Geospatial-Queries">&#182;</a></h3><ul>
 <li><code>$geoIntersects</code></li>
 <li><code>$geoWithin</code></li>
 <li><code>$near</code></li>
 <li><code>$nearSphere</code></li>
 <li><code>$geoNear</code></li>
 </ul>
-<p><a href="https://docs.mongodb.com/manual/geospatial-queries/">Geospatial Queries</a></p>
 
 </div>
 </div>
@@ -13589,7 +13561,9 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Redis">Redis<a class="anchor-link" href="#Redis">&#182;</a></h1><p><a href="https://redis.io/">redis.io</a></p>
+<h1 id="Redis-(redis.io)">Redis (<a href="https://redis.io/">redis.io</a>)<a class="anchor-link" href="#Redis-(redis.io)">&#182;</a></h1><ul>
+<li>in-memory data structure store, used as a database, cache and message broker</li>
+</ul>
 
 </div>
 </div>
@@ -13597,9 +13571,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li>in-memory data structure store, used as a database, cache and message broker</li>
-<li>Lyft 10 million QPS</li>
+<h3 id="Geospatial-Indexing">Geospatial Indexing<a class="anchor-link" href="#Geospatial-Indexing">&#182;</a></h3><ul>
 <li><a href="https://en.wikipedia.org/wiki/Geohash">Geohash</a> Indexing</li>
 </ul>
 
@@ -13609,14 +13581,13 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Geospatial-Commands">Geospatial Commands<a class="anchor-link" href="#Geospatial-Commands">&#182;</a></h3><ul>
+<h3 id="Geospatial-Commands"><a href="https://redislabs.com/redis-best-practices/indexing-patterns/geospatial/">Geospatial Commands</a><a class="anchor-link" href="#Geospatial-Commands">&#182;</a></h3><ul>
 <li><a href="https://redis.io/commands/geoadd">GEOADD</a></li>
 <li><a href="https://redis.io/commands/geohash">GEOHASH</a></li>
 <li><a href="https://redis.io/commands/geodist">GEODIST</a></li>
 <li><a href="https://redis.io/commands/georadius">GEORADIUS</a></li>
 <li><a href="https://redis.io/commands/georadiusbymember">GEORADIUSBYMEMBER</a></li>
 </ul>
-<p><a href="https://redislabs.com/redis-best-practices/indexing-patterns/geospatial/">Redis Best Practices - Geospatial</a></p>
 
 </div>
 </div>
@@ -13627,7 +13598,7 @@ a.anchor-link {
 <h1 id="Scalable-Geospatial-Data-Science">Scalable Geospatial Data Science<a class="anchor-link" href="#Scalable-Geospatial-Data-Science">&#182;</a></h1><h3 id="Nikolai-Janakiev-@njanakiev">Nikolai Janakiev <a href="https://github.com/njanakiev">@njanakiev</a><a class="anchor-link" href="#Nikolai-Janakiev-@njanakiev">&#182;</a></h3><ul>
 <li>Slides - <a href="https://janakiev.com/scalable-geospatial-data-science">janakiev.com/scalable-geospatial-data-science</a></li>
 <li>Benchmark (2017) - <a href="https://www.reply.com/en/topics/big-data-and-analytics/Shared%20Documents/DSTL-Report-Data-Reply-2017.pdf">Benchmarking of Big Data Technologies for Ingesting and Querying Geospatial Datasets</a></li>
-<li>MDPI 2020 - <a href="https://www.mdpi.com/2220-9964/9/5/331/pdf">State-of-the-Art Geospatial Information Processing inNoSQL Databases</a></li>
+<li>MDPI 2020 - <a href="https://www.mdpi.com/2220-9964/9/5/331/pdf">State-of-the-Art Geospatial Information Processing in NoSQL Databases</a></li>
 <li><a href="https://tech.marksblogg.com/benchmarks.html">Summary of the 1.1 Billion Taxi Rides Benchmarks</a></li>
 </ul>
 
